tests/should_fail/divide_by_zero.nv
module main

// SHOULD FAIL: dividing by zero
let x = 10 / 0
